--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <a href = 'epicycle.html'>One-Epicycle Visualization</a><br>
     <a href = 'index.html'>Two-Epicycle Visualization</a>
+    <h2>Two Epicycles</h2>
   </body>
 </html>
